Calculadora que soma dois valores

--- a/.gitignore
+++ b/.gitignore
@@ -3,3 +3,4 @@
 ################################################################################
 
 /ConsoleApp1/.vs/ConsoleApp1/v15/Server/sqlite3
+/ConsoleApp1/.vs/pratica/v15/Server/sqlite3
